Commitar enligt instruktion i uppgift labb css-del

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,16 @@
 <head>
     <title>BurgerHeaven Online</title>
     <meta charset="utf-8"/>
+   <!-- <link rel="stylesheet" type="text/css" href="css/reset.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <header>
-        <h1>Välkommen till BurgerOnline</h1>
+    <header class="headline">
+        <h1 style="position:absolute; padding: 350px;">Välkommen till BurgerOnline</h1>
+        <img src="img/Headline.jpg" style="opacity:0.5;  position:relative;">
     </header>
     <main>
-        <section>
+        <section class="space burgers">
             <h2>Select Burger</h2>
             <div>
                 <p>
@@ -17,36 +20,36 @@
                 </p>
             </div>
 
-
-            <div style="display: inline-block;">
+<div class="wrapper">
+            <div class="burgerspace" style="display: inline-block;">
                 <h3>BBQ burger</h3>
-                <img src="img/BBQ burger.jpg" style="width: 200px;">
+                <img src="img/BBQ burger.jpg" style="width: 200px; height: 200px">
                 <ul>
                     <li>Beef, tomato, lettuce, BBQ-sause</li>
-                    <li>Contains gluten</li>
+                    <li><span class="allergen">Contains gluten</span></li>
                 </ul>
             </div>
 
-            <div style="display: inline-block;">
+            <div class="burgerspace" style="display: inline-block;">
                 <h3>Veggie</h3>
-                <img src="img/Veggie burger.jpg" style="width: 200px;">
+                <img src="img/Veggie burger.jpg" style="width: 200px; height: 200px">
                 <ul>
                     <li>Quorn, tomato, lettuce, 3x cheese</li>
-                    <li>Contains gluten and lactose</li>
+                    <li><span class="allergen">Contains gluten and lactose</span></li>
                 </ul>
             </div>
 
-            <div style="display: inline-block;">
+            <div class="burgerspace" style="display: inline-block;">
                 <h3>Spicy onion Burger</h3>
-                <img src="img/Onion and jalapeno burger.jpg" style="width: 200px;">
+                <img src="img/Onion and jalapeno burger.jpg" style="width: 200px;   height: 200px;">
                 <ul>
                     <li>Beef, tomato, Onion, cheese, jalapeno</li>
-                    <li>Contains gluten and lactose</li>
+                    <li><span class="allergen">Contains gluten and lactose</span></li>
                 </ul>
             </div>
-
+</div>
         </section>
-        <section>
+        <section class="space customerinfo">
             <h2>Customer information</h2>
             <div>
                 <h3>Delivery information</h3>
@@ -60,18 +63,16 @@
                 </p>
                 <p>
                     <label for="street">Street</label><br>
-                    <input type="street" id="street" name="sn" required="required" placeholder="Street name">
+                    <input type="text" id="street" name="sn" required="required" placeholder="Street name">
                 </p>
                 <p>
                     <label for="house">House</label><br>
                     <input type="number" id="house" name="hn" required="required" placeholder="House number" min="1">
                 </p>
             </div>
-        </section>
-        <section>
             <h3>Payment options</h3>
             <p>
-                <label for="recipient">Recipient</label><be>
+                <label for="recipient">Recipient</label>
                 <select id="recipient" name="rcp">
                     <option>Credit card</option>
                     <option>Swish</option>
@@ -80,27 +81,26 @@
                 </select>
             </p>
             <h3>Gender</h3>
+            <div>
+                <input type="radio" id="female" name="drone" value="female" checked />
+                <label for="female">Female</label>
+            </div>
+            <div>
+                <input type="radio" id="male" name="drone" value="male" checked />
+                <label for="male">Male</label>
+            </div>
+            <div>
+                <input type="radio" id="do not wish to provide" name="drone" value="do not wish to provide" checked />
+                <label for="do not wish to provide">Do not wish to provide</label>
+            </div>
+        </section>
             <p>
-                <div>
-                    <input type="radio" id="female" name="drone" value="female" checked />
-                    <label for="female">Female</label>
-                </div>
-                <div>
-                    <input type="radio" id="male" name="drone" value="male" checked />
-                    <label for="male">Male</label>
-                </div>
-                <div>
-                    <input type="radio" id="do not wish to provide" name="drone" value="do not wish to provide" checked />
-                    <label for="do not wish to provide">Do not wish to provide</label>
-                </div>
-            </p>
-            <p>
-                <button type="submit">
+                <button class="ubspace" type="submit">
                     <img src="img/Deliveryimage.png" style="width: 50px;">
                     Place order
                 </button>
             </p>
-        </section>
+
     </main>
     <hr>
     <footer>
